--- a/src/app/common-grid/grid-item/grid-item.component.html
+++ b/src/app/common-grid/grid-item/grid-item.component.html
@@ -8,5 +8,6 @@
   {{person.birth_year}}
 </div>
 <div class="grid-cell">
-  {{person.homeworld}}
+  <div class="lds-ellipsis" *ngIf="isLoading"><div></div><div></div><div></div><div></div></div>
+  {{planetName}}
 </div>
