--- a/src/app/common-grid/common-grid.component.html
+++ b/src/app/common-grid/common-grid.component.html
@@ -1,4 +1,4 @@
 <div class="grid-wrapper">
-  <div class="header">Found {{count}} persons.</div>
+  <div class="header">Found {{count}} persons total.</div>
   <app-grid-item *ngFor="let person of people" [person]="person"></app-grid-item>
 </div>
